--- a/admin/lang/plugins/blog_de.xml
+++ b/admin/lang/plugins/blog_de.xml
@@ -56,6 +56,7 @@
     <message key="Overview">Übersicht</message>
     <message key="Post"></message>
     <message key="Categories">Kategorien</message>
+    <message key="New Category">Neue Kategorie</message>
     <message key="Links"></message>
     <message key="Files">Dateien</message>
     <message key="Options">Optionen</message>
