--- a/admin/lang/plugins/siteoptions_de.xml
+++ b/admin/lang/plugins/siteoptions_de.xml
@@ -20,11 +20,13 @@
     <message key="blogname_rssfeed">Blog-Name für den RSS-Feed. Falls dieses Feld leer ist wird 'Seiten-Name' verwendet</message>
     <message key="desc_rssfeed">Beschreibung für den RSS-Feed. Falls dieses Feld leer ist wird 'Seiten-Beschreibung' verwendet</message>
     <message key="Name of the site">Name der Seite</message>
-    <message key="blogCaptchaAfterDays">Nach wie vielen Tagen soll Captcha-Abfrage aktiviert werden</message>
     <message key="Subtitle for the site">Untertitel der Seite</message>
     <message key="motiv_help"><![CDATA[Mehr Motive sind unter <a href="http://intensivstation.ch/en/templates/bxcms/" 
     target="_blank">intensivstation.ch</a><br/>verfügbar(Überfahren Sie die Bilder mit der Maus<br/>um eine grössere Version zu sehen)]]></message>
     <message key="default_blogcommentmode">Grundeinstellung für den Blog-Kommentar-Modus. Sie können diesen für jeden Post später noch ändern.</message>
+    <message key="blogCaptchaAfterDays">Nach wie vielen Tagen soll Captcha-Abfrage aktiviert werden</message>
+    <message key="blogCaptchaFontPath">Der Pfad zu ihrem Schriften-Verzeichniss an</message>
+    <message key="blogCaptchaFontFile">Name des Schrift File</message>
     
     <message key="help_blogSendRejectedCommentNotification">Legt fest, ob E-Mail-Benachrichtigungen für abgelehnte Kommentare im Blog gesendet werden. Der Flux CMS Spam-Schutz versucht festzustellen, ob ein Kommentar 
     Spam ist oder nicht. Wenn er einen erkennt, ist es ziemlich sicher Spam und zweifelslos 
