--- a/admin/lang/plugins/siteoptions_en.xml
+++ b/admin/lang/plugins/siteoptions_en.xml
@@ -5,12 +5,15 @@
     <message key="motiv_help"><![CDATA[More themes available at <a href="http://intensivstation.ch/en/templates/bxcms/" target="_blank">intensivstation.ch</a>.
                               <br/>(Hover over the picture to see a larger version).]]></message>
     <message key="default_blogcommentmode">Default Blog post comment mode. You can change this for each post individually later.</message>
-    <message key="blogCaptchaAfterDays">After how many days captcha should be activated</message>
-    <message key="blogCaptchaFontPath">The path to your font dir</message>
-    <message key="blogCaptchaFontFile">The name of you font file</message>
+    
+    <!--<message key="blogCaptchaFontPath">The path to your font dir</message>
+    <message key="blogCaptchaFontFile">The name of you font file</message>-->
     <message key="help_blogSendRejectedCommentNotification">Send a notification mail on rejected comments. The Flux CMS comment spam protection tries
            hard to determine, if a comment is spam or not. If it rejects one, it's almost certainly spam and you most certainly
            don't want to be informed about that. If it's not sure, Flux CMS sets the post to moderated and you always get a mail then and you can then approve it.</message>
+    
+    <message key="help_blogCaptchaAfterDays">After how many days captcha should be activated. (-1 = never)</message>
+    <message key="help_openIdEnabled">Should OpenID verification be enabled for blog comments.</message>
     <message key="help_copyright">Who holds the copyright of your content?</message>
     <message key="help_cclink"><![CDATA[If you want to use a <a href='http://creativecommons.org/'>Creative Commons</a> license for your blog content, put the link to the license here. Eg. http://creativecommons.org/licenses/by/2.5/]]> </message>
     <message key="help_timezoneseconds"> Your timezone in seconds (eg. 3600). 'servertime' means server timezone.</message>
