- Added RSS feed support for newsletter
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@6833 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/admin/lang/master_de.xml
+++ b/admin/lang/master_de.xml
@@ -95,6 +95,8 @@
     <message key="Create Newsletter">Newsletter erstellen</message>
     <message key="Send Newsletter">Newsletter senden</message>
     <message key="Newsletter Archive">Newsletter Archiv</message>
+    <message key="Generate from Feed">Aus Feed generieren</message>
+    <message key="Edit RSS Feeds">RSS Feeds editieren</message>
     <message key="Subscribers">Abonnenten</message>
     <message key="Newsletters">Newsletter</message>
     
