- Support to embed images into a HTML mail - Forms are independent from the fields in newsletter_users now - Double-Opt-In per group - New CSV import format
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@6856 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/admin/lang/master_de.xml
+++ b/admin/lang/master_de.xml
@@ -89,15 +89,15 @@
     
     <!-- newsletter -->
     <message key="Edit Groups">Gruppen editieren</message>
-    <message key="Edit Mailing Lists">Mail-Listen editieren</message>
+    <message key="Edit Senders">Sender editieren</message>
     <message key="Edit Mail Servers">Mail Server editieren</message>
-    <message key="User Management">Benutzerliste</message>
+    <message key="User Management">Benutzer Übersicht</message>
     <message key="Create Newsletter">Newsletter erstellen</message>
     <message key="Send Newsletter">Newsletter senden</message>
     <message key="Newsletter Archive">Newsletter Archiv</message>
     <message key="Generate from Feed">Aus Feed generieren</message>
     <message key="Edit RSS Feeds">RSS Feeds editieren</message>
-    <message key="Subscribers">Abonnenten</message>
+    <message key="Management">Verwaltung</message>
     <message key="Newsletters">Newsletter</message>
     
 </catalogue>
