- added support for admin,edit in permission collection.php - added read, read_navi per default to all collections - resource access is handled by its parent collection
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@7187 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/admin/lang/master_de.xml
+++ b/admin/lang/master_de.xml
@@ -100,23 +100,28 @@
     <message key="Management">Verwaltung</message>
     <message key="Newsletters">Newsletter</message>
     
-    <message key="newsletter-back-feed">Newsletter aus Feed erstellen</message>
-    <message key="newsletter-back-send">Newsletter senden</message>
-    <message key="newsletter-back-archive">Newsletter Archiv anzeigen</message>
-    <message key="newsletter-back-manage">Newsletter Abonnenten anzeigen</message>
+    <message key="act_newsletter-back-feed">Newsletter aus Feed erstellen</message>
+    <message key="act_newsletter-back-send">Newsletter senden</message>
+    <message key="act_newsletter-back-archive">Newsletter Archiv anzeigen</message>
+    <message key="act_newsletter-back-manage">Newsletter Abonnenten anzeigen</message>
     
-    <message key="xhtml-back-create">Dateien erstellen</message>
+    <message key="act_xhtml-back-create">Dateien erstellen</message>
     
-    <message key="permissions-back-edit">Berechtigungen editieren</message>
+    <message key="act_permissions-back-manage">Berechtigungen editieren</message>
     
-    <message key="blog-back-post">Blog Einträge erfassen</message>
+    <message key="act_blog-back-post">Blog Einträge erfassen</message>
     
-    <message key="admin_dbforms2-back-newsletter_feeds">Feeds editieren</message>
-    <message key="admin_dbforms2-back-newsletter_from">Absender editieren</message>
-    <message key="admin_dbforms2-back-newsletter_groups">Gruppen editieren</message>
-    <message key="admin_dbforms2-back-newsletter_users">Benutzer editieren</message>
-    <message key="admin_dbforms2-back-newsletter_mailservers">Mail Server editieren</message>
-    <message key="admin_dbforms2-back-users">Benutzer editieren</message>
-    <message key="admin_dbforms2-back-perm_groups">Gruppen editieren</message>
+    <message key="act_act_admin_dbforms2-back-newsletter_feeds">Feeds editieren</message>
+    <message key="act_admin_dbforms2-back-newsletter_from">Absender editieren</message>
+    <message key="act_admin_dbforms2-back-newsletter_groups">Gruppen editieren</message>
+    <message key="act_admin_dbforms2-back-newsletter_users">Benutzer editieren</message>
+    <message key="act_admin_dbforms2-back-newsletter_mailservers">Mail Server editieren</message>
+    <message key="act_admin_dbforms2-back-users">Benutzer editieren</message>
+    <message key="act_admin_dbforms2-back-perm_groups">Gruppen editieren</message>
+    
+    <message key="act_permissions-back-admin">Zugriff auf Admin Bereich</message>
+    <message key="act_permissions-back-edit">Admin Bereich editieren</message>
+    <message key="act_collection-front-read">Collection anzeigen</message>
+    <message key="act_collection-front-read_navi">Collection in Navigation</message>
     
 </catalogue>
