- added permissions to disallow certain editors (bxe, kupu, fck, oneform)
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@7190 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/admin/lang/master_de.xml
+++ b/admin/lang/master_de.xml
@@ -105,7 +105,11 @@
     <message key="act_newsletter-back-archive">Newsletter Archiv anzeigen</message>
     <message key="act_newsletter-back-manage">Newsletter Abonnenten anzeigen</message>
     
-    <message key="act_xhtml-back-create">Dateien erstellen</message>
+    <message key="act_xhtml-back-create">XHTML Dateien erstellen</message>
+    <message key="act_xhtml-back-edit_bxe">Editieren mit BXE</message>
+    <message key="act_xhtml-back-edit_fck">Editieren mit FCKeditor</message>
+    <message key="act_xhtml-back-edit_oneform">Editieren mit Oneform</message>
+    <message key="act_xhtml-back-edit_kupu">Editieren mit Kupu</message>
     
     <message key="act_permissions-back-manage">Berechtigungen editieren</message>
     
