--- a/admin/lang/master_en.xml
+++ b/admin/lang/master_en.xml
@@ -43,9 +43,18 @@
     <message key="act_xhtml-back-edit_oneform">Edit in Oneform</message>
     <message key="act_xhtml-back-edit_kupu">Edit in Kupu</message>
     
-    <message key="act_permissions-back-manage">Edit permissions</message>
+    <message key="act_gallery-back-upload">Upload images</message>
+    <message key="act_gallery-back-edit_file">Edit in File</message>
+    <message key="act_gallery-back-edit_image">Edit in Image</message>
     
     <message key="act_blog-back-post">Post blog entries</message>
+    <message key="act_blog-back-categories">Edit categories</message>
+    <message key="act_blog-back-blogroll">Edit links</message>
+    <message key="act_blog-back-gallery">Edit gallery</message>
+    <message key="act_blog-back-files">Edit files</message>
+    <message key="act_blog-back-options">Edit blog options</message>
+    <message key="act_blog-back-private">Edit private feed</message>
+    <message key="act_admin_dbforms2-back-blogcomments">Edit blog comments</message>
     
     <message key="act_admin_dbforms2-back-newsletter_feeds">Edit feeds</message>
     <message key="act_admin_dbforms2-back-newsletter_from">Edit senders</message>
@@ -55,8 +64,10 @@
     <message key="act_admin_dbforms2-back-users">Edit users</message>
     <message key="act_admin_dbforms2-back-perm_groups">Edit groups</message>
     
+    <message key="act_permissions-back-manage">Edit permissions</message>
     <message key="act_permissions-back-admin">Access admin section</message>
     <message key="act_permissions-back-edit">Edit admin section</message>
+    
     <message key="act_collection-front-read">Read collection</message>
     <message key="act_collection-front-read_navi">Collection in navigation</message>
     
