added french admin language files
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@7824 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/admin/lang/plugins/blog_de.xml
+++ b/admin/lang/plugins/blog_de.xml
@@ -3,12 +3,17 @@
     <message key="Make new Blog Entry">Neuen Blog-Eintrag erzeugen</message>
     <message key="Blog"></message>
     <message key="Main">Blog</message>
+	<message key="RSS Comments">RSS Kommentare</message>
+	<message key="RSS Feed (incl. private)">RSS Feed (inkl. private)</message>
+	<message key="RSS Comments (incl. private)">RSS Kommentare (inkl. private)</message>
+	<message key="Generate new private key">Privater Schlüssel erzeugen</message>
+	<message key="New Category">Neue Kategorie</message>
     <message key="Edit Categories/Links">Kategorien/Links</message>
     <message key="Diversa"></message>
     <message key="Blog Posts Overview / Latest Comments">Übersicht der neuesten Posts und Kommentare</message>
     <message key="Edit Categories">Kategorien editieren</message>
     <message key="Edit Links">Links editieren</message>
-    <message key="Edit Linkscategories">Links-Kategorien editieren</message>
+    <message key="Edit Links and Linkcategories">Links-Kategorien editieren</message>
     <message key="Edit Comments">Kommentare editieren</message>
     <message key="Flux CMS Bookmarklet">Flux CMS Lesezeichen</message>
     <message key="Drag'n'drop to your bookmarks for immediate posting from your browser">Lesezeichen zum Sofortzugriff für das Generieren neuer Blog-Posts</message>    
