--- a/admin/lang/master_de.xml
+++ b/admin/lang/master_de.xml
@@ -26,6 +26,7 @@
     <message key="Move">Verschieben</message>
 
     <message key="Edit in {editor}">Mit {editor} editieren</message>
+	<message key="Download more themes">Andere Layouts herunterladen</message>
 
     <!--<message key="Edit in bxe"></message>
     <message key="Edit in kupu"></message>
@@ -78,6 +79,7 @@
    <message key="home">Startseite</message>
    <message key="help">Hilfe</message>
    <message key="logout">Sitzung beenden</message>
+   <message key="delete tmp">tmp löschen</message>
    <message key="User:">Benutzer:</message>
    
    
