translations for the ajax saving button in germand
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@9164 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/admin/lang/js_de.xml
+++ b/admin/lang/js_de.xml
@@ -48,4 +48,8 @@
     <message key="Do you really want to delete the image &quot;{0}&quot;?">Wollen sie das Bild "{0}" wirklich löschen?</message>
     <message key="Do you really want to delete the gallery &quot;{0}&quot;?">Wollen sie die Galerie "{0}" wirklich löschen?</message>
     
+    <message key="Saving...">Sichern...</message>
+    <message key="Saved">Gespeichert</message>
+    <message key="Save">Sichern</message>
+    
 </catalogue>
