french translations for the ajax save button
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@9165 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/admin/lang/js_fr.xml
+++ b/admin/lang/js_fr.xml
@@ -39,4 +39,8 @@
     <message key="Copy {0} to:">Copier de {0} à:</message>
     <message key="Do you really want to delete {0} ?">Définitivement effacer {0}?</message>
     
+    <message key="Saving...">Enregistrer...</message>
+    <message key="Saved">Enregistré</message>
+    <message key="Save">Enregistrer</message>
+    
 </catalogue>
