--- a/admin/lang/plugins/siteoptions_en.xml
+++ b/admin/lang/plugins/siteoptions_en.xml
@@ -22,7 +22,7 @@
     <message key="help_icbm"><![CDATA[Your geolocation. It's basically "Latitude, Longitude" (47.3798, 8.5275 for the Bitflux office). If you don't know your coordinates, go to 
     <a target='_new' href='http://multimap.com'>Multimap.com</a>, search your place and copy the data from the box on the bottom called "Map Information".]]></message>
     <message key="help_outputlanguages">Available output languages (semicolon separated 2 letter codes)</message>
-    <message key="help_defaultlanguage">Default language (a 2 letter code from above)</message>
+    <message key="help_defaultlanguage">Default language (a 2 letter code from above or "auto" for automatic browser language detection)</message>
     <message key="help_image_allowed_sizes">Allowed image sizes for dynamic resizing</message>
     <message key="Blog Default Editor">We highly recommend the WYSIWYG (what you see is what you get) editor, if you're not familiar with HTML. It also has more features than the Source Editor. The WYSIWYG Editor automatically falls back to the Source Editor, if your browser doesn't support it.</message>
 <message key="help_blogWeblogsPing">Which services to ping.</message>
